# thesis-project

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  README.md  flake.nix  shell.nix
.github/workflows/: compile.yml
resources/meshes/: sponza.fbx
resources/shaders/: test.vert  triangle.vert
resources/shaders/gl/: geometry_pass.frag  geometry_pass.vert  gizmo_pass.frag  gizmo_pass.vert  lighting_pass.frag  lighting_pass.vert  particle_pass.frag  particle_pass.vert  test.frag  test.vert
resources/shaders/vk/: geometry_pass.frag  geometry_pass.vert  gizmo_pass.frag  gizmo_pass.vert  lighting_pass.frag  lighting_pass.vert  particle_pass.frag  particle_pass.vert  test.frag  test.vert
src/: BaseScene.cpp  BaseScene.hpp  main.cpp
src/core/: Camera.cpp  Camera.hpp  EventSystem.cpp  EventSystem.hpp  GraphicsAPI.hpp  IRenderer.cpp  IRenderer.hpp  RendererFactory.cpp  RendererFactory.hpp  ThreadPool.cpp  ThreadPool.hpp  Transform.cpp  Transform.hpp  Vertex.hpp  Window.cpp  Window.hpp
src/core/editor/: MaterialEditor.cpp  MaterialEditor.hpp  PerformanceGUI.cpp  PerformanceGUI.hpp
src/core/resource/: IMaterial.hpp  IMesh.hpp  IResource.hpp  IResourceFactory.hpp  ITexture.hpp  Material.cpp  Material.hpp  MaterialInstance.cpp  MaterialInstance.hpp  MaterialLibrary.cpp  MaterialLibrary.hpp  MaterialTemplate.cpp  MaterialTemplate.hpp  MeshLoader.cpp  MeshLoader.hpp  ResourceHandle.hpp  ResourceManager.cpp  ResourceManager.hpp
src/core/scene/: MeshLoaderHelper.cpp  MeshLoaderHelper.hpp  Node.cpp  Node.hpp  Scene.cpp  Scene.hpp
src/core/scene/components/: Component.cpp  Component.hpp  LightComponent.cpp  LightComponent.hpp  ParticleSystemComponent.cpp  ParticleSystemComponent.hpp  RendererComponent.cpp  RendererComponent.hpp  TransformComponent.cpp  TransformComponent.hpp
src/core/system/: CPUTimer.cpp  CPUTimer.hpp  IGPUTimer.hpp  PerformanceLogger.cpp  PerformanceLogger.hpp  PerformanceMetrics.cpp  PerformanceMetrics.hpp  SystemInfo.cpp  SystemInfo.hpp
src/gl/: GLBuffer.cpp  GLBuffer.hpp  GLFramebuffer.cpp  GLFramebuffer.hpp  GLGPUTimer.cpp  GLGPUTimer.hpp  GLRenderPass.cpp  GLRenderPass.hpp  GLRenderer.cpp  GLRenderer.hpp  GLSampler.cpp  GLSampler.hpp  GLShader.cpp  GLShader.hpp  GLVertexArray.cpp  GLVertexArray.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp
src/gl/resource/: GLMaterial.cpp  GLMaterial.hpp  GLMesh.cpp  GLMesh.hpp  GLResourceFactory.cpp  GLResourceFactory.hpp  GLTexture.cpp  GLTexture.hpp
src/vk/: VKRenderer.cpp  VKRenderer.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommandBuffers.cpp  VulkanCommandBuffers.hpp  VulkanDebugMessenger.cpp  VulkanDebugMessenger.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanGPUTimer.cpp  VulkanGPUTimer.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSampler.cpp  VulkanSampler.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/vk/resource/: VulkanMaterial.cpp  VulkanMaterial.hpp  VulkanMesh.cpp  VulkanMesh.hpp  VulkanResourceFactory.cpp  VulkanResourceFactory.hpp  VulkanTexture.cpp  VulkanTexture.hpp
